kubernetes/apps/catus-locatus/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio-svc
  name: minio-svc
  namespace: catus-locatus
spec:
  ports:
    - name: 9000-9000
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: 9001-9001
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: minio
  type: ClusterIP
status:
  loadBalancer: {}
